# BloodHound

./: .cursorrules  .gitignore  ALL_DOCUMENTATION_INDEX.md  ARCHITECTURE_DIAGRAM.md  BACKEND_API_INTEGRATION.md  BLOODSNIFFER_README.md  COMMIT_COMPLETE.md  COMMIT_SUMMARY.md  COMPLETE_INTEGRATION_SUMMARY.md  COMPLETE_MASTER_INDEX.md  COMPLETION_VERIFICATION.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  EXECUTIVE_SUMMARY.md  FINAL_INTEGRATION_STATUS.md  FINAL_PROJECT_STATUS.md  FINAL_PROJECT_SUMMARY.md  FINAL_WORKSPACE_SUMMARY.md  GAP-ANALYSIS-SUMMARY.md  IMPLEMENTATION-READY.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  INTEGRATION_CHECKLIST.md  MASTER-TASK-PLAN.md  MASTER_PROJECT_INDEX.md  MASTER_SUMMARY.md  NAVIGATION_GUIDE.md  PROGRESS-SUMMARY.md  PROGRESS-UPDATE.md  PROGRESS.md  PROJECT_COMPLETE.md  PROJECT_COMPLETE_FINAL.md  PROJECT_COMPLETE_FINAL_STATUS.md  PROJECT_COMPLETE_VERIFIED.md  PROJECT_COMPLETION_CERTIFICATE.md  PROJECT_COMPLETION_REPORT.md  PROJECT_FINAL_REPORT.md  PROJECT_FINAL_STATUS.md  PROJECT_ROADMAP.md  PYRO_DETECTOR_COMPLETE.md  (+25 more)
.github/workflows/: ci.yml
cmd/api/src/api/registration/: v2.go
cmd/api/src/api/v2/: pyro_detector.go
cmd/api/src/config/: config.go
cmd/ui/src/api/: pyroDetector.ts
cmd/ui/src/components/MainNav/: MainNavData.tsx
cmd/ui/src/routes/: constants.ts  index.ts
cmd/ui/src/views/PyroDetector/: PyroDetectorView.tsx  README.md  index.ts
examples/: cryptex_example.rs
fire-marshal/: Cargo.toml
fire-marshal/src/: datapipe.rs  main.rs  monitoring.rs  orchestrator.rs
fire-marshal/src/api/: handlers.rs  state.rs
installer/: pyro.iss  pyro.wxs
mcp-translator/: Cargo.toml  README.md  USAGE.md  cursor-mcp-config.json  mcp-config.json  setup-cursor-mcp.md
mcp-translator/examples/: translate_bloodhound.sh
mcp-translator/src/: agents.rs  gap_analysis.rs  lib.rs  main.rs  parser.rs  server.rs  translator.rs
node-red-bridge/: Cargo.toml
node-red-bridge/src/: http_bridge.rs  lib.rs  mqtt_bridge.rs
pyro-core/: Cargo.toml
pyro-core/src/: bootstrap.rs  branding.rs  config.rs  data_extractor.rs  lib.rs  main.rs  pipeline.rs
pyro-core/src/api/: handlers.rs  middleware.rs  state.rs
pyro-core/src/auth/: crypto.rs  handlers.rs  mod.rs  session.rs
pyro-core/src/database/: migrations.rs  mod.rs  models.rs  redb_store.rs
pyro-detector/: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  BEST_PRACTICES.md  CHANGELOG.md  COMPARISON.md  COMPLETE_CHECKLIST.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETION_CERTIFICATE.md  CURSOR_SETUP.md  Cargo.toml  DEPLOYMENT.md  FAQ.md  FINAL_SUMMARY.md  INDEX.md  INTEGRATION_GUIDE.md  MASTER_INDEX.md  OVERVIEW.md  QUICK_START.md  README.md  README_START_HERE.md  SUMMARY.md  TROUBLESHOOTING.md  VALIDATION.md  mcp-config.json  pyro-detector-config.json.example  setup.ps1  setup.sh  test-connection.ps1  test-connection.sh
pyro-detector/examples/: README.md  basic-usage.sh  investigation-workflow.sh
pyro-detector/src/: api.rs  cdif.rs  config.rs  health.rs  lib.rs  logging.rs  main.rs  mcp_server.rs  types.rs  utils.rs
qa/: README.md
qa/integration/: api_tests.rs
qa/ua/: user_workflows.md
qa/unit/: mod.rs
scripts/: README-AGENTS.md  agent-all-status.sh  agent-create.sh  agent-plan.sh  agent-roadmap.sh  agent-status.sh  agent-update.sh  analyze-codebase.sh  automated-deploy.sh  generate-comprehensive-todos.py  generate-todo-list.sh  quick-status.sh  run-all-analysis.sh  run-complete-audit.sh  run-gap-analysis.sh  run-qa-tests.sh  translate-all.sh  translate-bootstrap.sh  update-progress.sh
steering/: README.md  agent-usage-guide.md  comprehensive-gap-analysis.md  cryptex-dictionary.md  gap-analysis-report.md  implementation-guide.md  implementation-notes.md  next-steps.md  production-readiness.md  project-workflow-a-to-b.md  translation-progress.md
tools/implementation-templates/: README.md  api-handler-template.rs  database-model-template.rs  module-template.rs
