[workspace]
members = [
    "pyro-core",
    "cryptex",
    "fire-marshal",
    "node-red-bridge",
    "mcp-translator",
    "pyro-detector",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Anarchist Collective"]
license = "Apache-2.0"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redb = "2.3"
anyhow = "1.0"
thiserror = "2.0"

# Async and networking
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
tower = "0.5"

# Data processing
bincode = "1.3"
rmp-serde = "1.3"

# Crypto for cryptex
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Node-RED integration
mqtt = "0.14"

