[package]
name = "fire-marshal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
redb.workspace = true
anyhow.workspace = true
thiserror.workspace = true
axum.workspace = true
tower.workspace = true
reqwest.workspace = true
chrono = "0.4"

# Local workspace dependencies
cryptex = { path = "../cryptex" }
node-red-bridge = { path = "../node-red-bridge" }
pyro-core = { path = "../pyro-core" }

[[bin]]
name = "fire-marshal"
path = "src/main.rs"

